// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renaming > #2410 1`] = `"fixture.vue"`;

exports[`Renaming > #2410 2`] = `
[
  {
    "newText": "h2",
    "range": {
      "end": {
        "character": 18,
        "line": 0,
      },
      "start": {
        "character": 16,
        "line": 0,
      },
    },
  },
  {
    "newText": "h2",
    "range": {
      "end": {
        "character": 13,
        "line": 0,
      },
      "start": {
        "character": 11,
        "line": 0,
      },
    },
  },
]
`;

exports[`Renaming > #2410 3`] = `"fixture.vue"`;

exports[`Renaming > #2410 4`] = `
[
  {
    "newText": "h2",
    "range": {
      "end": {
        "character": 18,
        "line": 0,
      },
      "start": {
        "character": 16,
        "line": 0,
      },
    },
  },
  {
    "newText": "h2",
    "range": {
      "end": {
        "character": 13,
        "line": 0,
      },
      "start": {
        "character": 11,
        "line": 0,
      },
    },
  },
]
`;

exports[`Renaming > <script setup> 1`] = `"tsconfigProject/fixture.vue"`;

exports[`Renaming > <script setup> 2`] = `
[
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 12,
        "line": 6,
      },
      "start": {
        "character": 9,
        "line": 6,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 10,
        "line": 2,
      },
      "start": {
        "character": 7,
        "line": 2,
      },
    },
  },
]
`;

exports[`Renaming > CSS 1`] = `"fixture.vue"`;

exports[`Renaming > CSS 2`] = `
[
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 27,
        "line": 2,
      },
      "start": {
        "character": 24,
        "line": 2,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 7,
        "line": 7,
      },
      "start": {
        "character": 4,
        "line": 7,
      },
    },
  },
]
`;

exports[`Renaming > CSS 3`] = `"fixture.vue"`;

exports[`Renaming > CSS 4`] = `
[
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 19,
        "line": 2,
      },
      "start": {
        "character": 16,
        "line": 2,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 7,
        "line": 6,
      },
      "start": {
        "character": 4,
        "line": 6,
      },
    },
  },
]
`;

exports[`Renaming > CSS 5`] = `"fixture.vue"`;

exports[`Renaming > CSS 6`] = `
[
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 33,
        "line": 10,
      },
      "start": {
        "character": 30,
        "line": 10,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 27,
        "line": 10,
      },
      "start": {
        "character": 24,
        "line": 10,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 27,
        "line": 7,
      },
      "start": {
        "character": 24,
        "line": 7,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 12,
        "line": 2,
      },
      "start": {
        "character": 9,
        "line": 2,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 34,
        "line": 12,
      },
      "start": {
        "character": 31,
        "line": 12,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 28,
        "line": 12,
      },
      "start": {
        "character": 25,
        "line": 12,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 34,
        "line": 11,
      },
      "start": {
        "character": 31,
        "line": 11,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 28,
        "line": 11,
      },
      "start": {
        "character": 25,
        "line": 11,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 28,
        "line": 9,
      },
      "start": {
        "character": 25,
        "line": 9,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 28,
        "line": 8,
      },
      "start": {
        "character": 25,
        "line": 8,
      },
    },
  },
]
`;

exports[`Renaming > Component dynamic props 1`] = `"tsconfigProject/fixture.vue"`;

exports[`Renaming > Component dynamic props 2`] = `
[
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 12,
        "line": 6,
      },
      "start": {
        "character": 9,
        "line": 6,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 14,
        "line": 2,
      },
      "start": {
        "character": 11,
        "line": 2,
      },
    },
  },
]
`;

exports[`Renaming > Component props 1`] = `"tsconfigProject/fixture.vue"`;

exports[`Renaming > Component props 2`] = `
[
  {
    "newText": "cccDdd",
    "range": {
      "end": {
        "character": 23,
        "line": 6,
      },
      "start": {
        "character": 17,
        "line": 6,
      },
    },
  },
  {
    "newText": "cccDdd",
    "range": {
      "end": {
        "character": 13,
        "line": 2,
      },
      "start": {
        "character": 7,
        "line": 2,
      },
    },
  },
]
`;

exports[`Renaming > Component props 3`] = `"tsconfigProject/foo.vue"`;

exports[`Renaming > Component props 4`] = `
[
  {
    "newText": "cccDdd",
    "range": {
      "end": {
        "character": 17,
        "line": 3,
      },
      "start": {
        "character": 11,
        "line": 3,
      },
    },
  },
  {
    "newText": "ccc-ddd",
    "range": {
      "end": {
        "character": 18,
        "line": 2,
      },
      "start": {
        "character": 11,
        "line": 2,
      },
    },
  },
]
`;

exports[`Renaming > Component returns 1`] = `"tsconfigProject/fixture.vue"`;

exports[`Renaming > Component returns 2`] = `
[
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 10,
        "line": 2,
      },
      "start": {
        "character": 7,
        "line": 2,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 9,
        "line": 11,
      },
      "start": {
        "character": 6,
        "line": 11,
      },
    },
  },
]
`;

exports[`Renaming > Component tags 1`] = `"tsconfigProject/fixture.vue"`;

exports[`Renaming > Component tags 2`] = `
[
  {
    "newText": "cc-dd",
    "range": {
      "end": {
        "character": 18,
        "line": 3,
      },
      "start": {
        "character": 13,
        "line": 3,
      },
    },
  },
  {
    "newText": "cc-dd",
    "range": {
      "end": {
        "character": 10,
        "line": 3,
      },
      "start": {
        "character": 5,
        "line": 3,
      },
    },
  },
  {
    "newText": "CcDd",
    "range": {
      "end": {
        "character": 16,
        "line": 2,
      },
      "start": {
        "character": 12,
        "line": 2,
      },
    },
  },
  {
    "newText": "CcDd",
    "range": {
      "end": {
        "character": 9,
        "line": 2,
      },
      "start": {
        "character": 5,
        "line": 2,
      },
    },
  },
  {
    "newText": "CcDd",
    "range": {
      "end": {
        "character": 14,
        "line": 7,
      },
      "start": {
        "character": 10,
        "line": 7,
      },
    },
  },
]
`;

exports[`Renaming > Component type props 1`] = `"tsconfigProject/fixture.vue"`;

exports[`Renaming > Component type props 2`] = `
[
  {
    "newText": "cccDdd",
    "range": {
      "end": {
        "character": 13,
        "line": 2,
      },
      "start": {
        "character": 7,
        "line": 2,
      },
    },
  },
  {
    "newText": "cccDdd",
    "range": {
      "end": {
        "character": 23,
        "line": 6,
      },
      "start": {
        "character": 17,
        "line": 6,
      },
    },
  },
]
`;

exports[`Renaming > Component type props 3`] = `"tsconfigProject/foo.vue"`;

exports[`Renaming > Component type props 4`] = `
[
  {
    "newText": "cccDdd",
    "range": {
      "end": {
        "character": 17,
        "line": 3,
      },
      "start": {
        "character": 11,
        "line": 3,
      },
    },
  },
  {
    "newText": "ccc-ddd",
    "range": {
      "end": {
        "character": 18,
        "line": 2,
      },
      "start": {
        "character": 11,
        "line": 2,
      },
    },
  },
]
`;
